add tenantItems and route
