# routes/tenantItemRoute.js
@@ -1,7 +1,9 @@
 const express = require("express");
-const { createTenantItem } = require("../controllers/tenantItemController");
+const { createTenantItem, getTenantItems, getAllTenantItems } = require("../controllers/tenantItemController");
 const tenantItemRouter = express.Router();
 
+tenantItemRouter.get("/tenantItems", getAllTenantItems);
 tenantItemRouter.post("/tenantItems", createTenantItem);
+tenantItemRouter.get("/tenantItems/:tenantId", getTenantItems);
 
 module.exports = { tenantItemRouter };
